<resources>
    <string name="app_name">TapLab</string>
    <string name="todo1">TODO</string>
    <string name="tap_knight">TAP KNIGHT</string>
    <string name="todo">TODO</string>
    <string name="startgame">СТАРТ</string>
    <string name="todoatk">TODO</string>
    <string name="todoimgtxt">TODO</string>
    <string name="todogoldtxt">TODO</string>
    <string name="todomap">TODO</string>
    <string name="one_txt">1</string>
    <string name="mobkillstodo">TODO</string>
    <string name="postmenttodo">TODO</string>
    <string name="todoonenew">1</string>
    <string name="todosetg">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todoohwow">TODO</string>
    <string name="todoclr">TODO</string>
    <string name="todoclrone">TODO</string>
    <string name="todoclrtwo">TODO</string>
    <string name="todoblockone">TODO</string>
    <string name="sbrosmira">СБРОСИТЬ МИР</string>
    <string name="todobomb">TODO</string>
    <string name="todoexplos">TODO</string>
    <string name="todoshopbg">TODO</string>
    <string name="todoexshpbt">TODO</string>
    <string name="todoshpsquare">TODO</string>
    <string name="todoswrdpxx">TODO</string>
    <string name="swordnowichka">Меч новичка</string>
    <string name="buybttodo">TODO</string>
    <string name="todogldicn">TODO</string>
    <string name="tododownbar">TODO</string>
    <string name="todoshopbt">TODO</string>
    <string name="swordsworda">Меч меча</string>
    <string name="onepludmgt">+1</string>
    <string name="twopluss">2</string>
    <string name="plustwoo">+2</string>
    <string name="otchislenie">Отчисление</string>
    <string name="plusthree">+3</string>
    <string name="kinshall">Кинжал</string>
    <string name="plusfivee">+5</string>
    <string name="katanaa">Катана</string>
    <string name="plusfivexx">5</string>
    <string name="plusfivexy">+5</string>
    <string name="plussevenn">+7</string>
    <string name="todogld">TODOGLD</string>
    <string name="bgjapn">TODO</string>
    <string name="shesterka">Шестёрка</string>
    <string name="_1sec">+1 АТК/СЕК</string>
    <string name="_2atksek">2 АТК/СЕК</string>
    <string name="_50atksek">50</string>
    <string name="_150atksek">150</string>
    <string name="sanyoktxt">Санёк</string>
    <string name="string_sanyoktxt" />
    <string name="sanyatext">Санёк</string>
    <string name="string_sanyatext">Санёк</string>
    <string name="_2TKSEK">+2 АТК/СЕК</string>
    <string name="_3ATKSK">+3 АТК/СЕК</string>
    <string name="_450price">450</string>
    <string name="arabictxt">شاب رائع</string>
    <string name="string_arabictxt">شاب رائع</string>
    <string name="seetrailer">СМОТРЕТЬ ТРЕЙЛЕР</string>
</resources>