<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/shopFragm"
    tools:context=".AchFragment">


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bgpixeljapan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/bgjapn" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/pixel_coins"
        app:layout_constraintBottom_toBottomOf="@+id/goldreal"
        app:layout_constraintStart_toEndOf="@+id/goldreal"
        app:layout_constraintTop_toTopOf="@+id/goldreal"
        android:contentDescription="@string/todogld" />

    <TextView
        android:id="@+id/goldreal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/balsamiqsansregularr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exit_shop"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:contentDescription="@string/todoexshpbt"
        android:src="@drawable/exit_bt_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/squarepixx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todoshpsquare" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="87dp"
        android:layout_height="81dp"
        android:src="@drawable/px_girl"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        android:contentDescription="@string/todoswrdpxx" />

    <TextView
        android:id="@+id/damageplus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balsamiqsansregularr"
        android:text="@string/_1sec"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/balsamiqsansregularr"
        android:text="@string/shesterka"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/buy_sword_one"
        android:layout_width="169dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/buybttodo"
        android:src="@drawable/yellow_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/price_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balsamiqsansregularr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:text="@string/_50atksek"
        app:layout_constraintBottom_toBottomOf="@+id/buy_sword_one"
        app:layout_constraintEnd_toEndOf="@+id/buy_sword_one"
        app:layout_constraintStart_toStartOf="@+id/buy_sword_one"
        app:layout_constraintTop_toTopOf="@+id/buy_sword_one" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="23dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/pixel_coins"
        app:layout_constraintBottom_toBottomOf="@+id/buy_sword_one"
        app:layout_constraintStart_toEndOf="@+id/price_one"
        app:layout_constraintTop_toTopOf="@+id/buy_sword_one"
        android:contentDescription="@string/todogldicn" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/todoshpsquare"
        android:src="@drawable/squarepixx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/damageplus1" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="87dp"
        android:layout_height="81dp"
        android:src="@drawable/sanyaa"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13"
        android:contentDescription="@string/todoswrdpxx" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/balsamiqsansregularr"
        android:text="@string/string_sanyatext"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/buy_sword_two"
        android:layout_width="169dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/buybttodo"
        android:src="@drawable/yellow_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/price_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balsamiqsansregularr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:text="@string/_150atksek"
        app:layout_constraintBottom_toBottomOf="@+id/buy_sword_two"
        app:layout_constraintEnd_toEndOf="@+id/buy_sword_two"
        app:layout_constraintStart_toStartOf="@+id/buy_sword_two"
        app:layout_constraintTop_toTopOf="@+id/buy_sword_two" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="23dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/pixel_coins"
        app:layout_constraintBottom_toBottomOf="@+id/buy_sword_two"
        app:layout_constraintStart_toEndOf="@+id/price_two"
        app:layout_constraintTop_toTopOf="@+id/buy_sword_two"
        android:contentDescription="@string/todogldicn" />

    <TextView
        android:id="@+id/damageplus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balsamiqsansregularr"
        android:text="@string/_2TKSEK"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="64dp"
        android:contentDescription="@string/todoshpsquare"
        android:src="@drawable/squarepixx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/damageplus2" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="87dp"
        android:layout_height="81dp"
        android:src="@drawable/arabb"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16"
        android:contentDescription="@string/todoswrdpxx" />

    <TextView
        android:id="@+id/damageplus3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balsamiqsansregularr"
        android:text="@string/_3ATKSK"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/balsamiqsansregularr"
        android:text="@string/string_arabictxt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />

    <ImageView
        android:id="@+id/buy_sword_three"
        android:layout_width="169dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/buybttodo"
        android:src="@drawable/yellow_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/price_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balsamiqsansregularr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:text="@string/_450price"
        app:layout_constraintBottom_toBottomOf="@+id/buy_sword_three"
        app:layout_constraintEnd_toEndOf="@+id/buy_sword_three"
        app:layout_constraintStart_toStartOf="@+id/buy_sword_three"
        app:layout_constraintTop_toTopOf="@+id/buy_sword_three" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="23dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/pixel_coins"
        app:layout_constraintBottom_toBottomOf="@+id/buy_sword_three"
        app:layout_constraintStart_toEndOf="@+id/price_three"
        app:layout_constraintTop_toTopOf="@+id/buy_sword_three"
        android:contentDescription="@string/todogldicn" />

</androidx.constraintlayout.widget.ConstraintLayout>